force-app/main/default/objects/Box_Jwt_Connection__c/Box_Jwt_Connection__c.object-meta.xml
<CustomObject>
    <label>Box Jwt Connection</label>
    <pluralLabel>Box Jwt Connections</pluralLabel>
    <nameField>
        <label>Box Jwt Connection Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>