force-app/main/default/objects/Box_Jwt_Connection__c/fields/Connection_Name__c.field-meta.xml
<CustomField>
    <fullName>Connection_Name__c</fullName>
    <label>Connection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>