force-app/main/default/objects/Box_Jwt_Connection__c/fields/Enterprise_ID__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_ID__c</fullName>
    <label>Enterprise ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>