force-app/main/default/objects/Box_Jwt_Connection__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Private Key</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>