force-app/main/default/objects/Box_Jwt_Connection__c/fields/Public_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>Public_Key_ID__c</fullName>
    <label>Public Key Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>